Uploaded new files
Uploaded edited index.html, hpeLogo.png, and index.css files

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
           <li><a href="#activities">Activities</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#faq">FAQ</a></li>
-          <li><a href="workshops.html">Workshops</a></li>
           <li><a href="links.html">Links</a></li>
-          <li class="nav-cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfnJJu36erBKFLpD8PFPFMTO72d3koin88vc6FInhFrbXbTjA/viewform?usp=sf_link">Sign Up</a></li>
+          <li class="nav-cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc_jyuREu04MNZjQIQxl0LUJDQeTOQXkPBshsxrDjgyC9mvWg/viewform?usp=sf_link">Sign Up</a></li>
         </ul>
       </nav>
       
@@ -44,7 +43,7 @@
           <p>Discover one of the most exciting STEM fields with trained instructors and your peers.</p>
         </div>
         <div class="hero-cta">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnJJu36erBKFLpD8PFPFMTO72d3koin88vc6FInhFrbXbTjA/viewform?usp=sf_link" class="primary-cta">Sign up now</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSc_jyuREu04MNZjQIQxl0LUJDQeTOQXkPBshsxrDjgyC9mvWg/viewform?usp=sf_link" class="primary-cta">Sign up now</a>
         </div>
       </div>
     </section>
@@ -72,9 +71,9 @@
         <div class="right-side">
           <h2>Workshops taught by experienced CS students</h2>
           <p>Join us for weekly workshops on introduction to computer science, python, machine learning and more! Learn from experienced CS students and create real world projects with our project-based workshops.</p>
-          <div class="workshop-link">
+          <!-- <div class="workshop-link">
             <a href="workshops.html">Workshop Schedule <img id="arrow" src="assets/svgs/arrow.svg"></a>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -120,6 +119,11 @@
           <p>ACSL is a computer programming and computer science contest for K-12 students, offering multiple divisions for differing age group sand experience levels. A short multiple choice test on CS concepts is followed by a coding problem.</p>
         </div>
 
+        <div class="event">
+          <h1>HPE Code Wars</h1>
+          <img src="assets/images/hpeLogo.png"></img>
+          <p>HPE Code Wars is a national team-based coding competition with divisions for both novice and advanced teams. Teams represent their schools are various competition centers, coding solutions to real-world CS problems with ascending difficulty.</p>
+        </div>
       </div>
 
     </div>
@@ -143,17 +147,17 @@
   
         <div class="question">
           <h3>What are the time commitments for this club?</h3>
-          <p>It depends on how many activities you would like to participate in. Most members attend around 1-2 workshops a week, totalling 1-2 hours a week.</p>
+          <p>Time commitments are flexible, and what you put into this club is what you get out of it. Our activities range from low-commitment activities like workshops to lengthy, high-commitment acitivities like hackathon competitions.</p>
         </div>
   
         <div class="question">
           <h3>Which kinds of workshops are offered at CSC?</h3>
-          <p>Workshops cover computer science principles and programming languages for beginner, intermediate and advanced students. To see a full list of workshops, see the workshop schedule.</p>
+          <p>Workshops cover computer science principles and programming languages for beginner, intermediate and advanced students. The workshops we offer are based on interest and competition planning, so stay on the lookout for more information!</p>
         </div>
   
         <div class="question">
           <h3>Can beginners attend the MontyHacks hackathon?</h3>
-          <p>Absolutely! MontyHacks will be a coding competition but beginners are highly encouraged to attend to get hands dirty wiht a real world project, and to get some good food :)</p>
+          <p>Absolutely! MontyHacks will be a coding competition but beginners are highly encouraged to attend to get experience with a real world project, and to get some good food.</p>
         </div>
 
       </div>
@@ -170,7 +174,7 @@
       <p>Get added to our email list by filling out the form below.</p>
       <div class="cta-submit">
         <div class="cta-email-btn-div">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnJJu36erBKFLpD8PFPFMTO72d3koin88vc6FInhFrbXbTjA/viewform?usp=sf_link" class="cta-email-btn">Fill Out Form</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSc_jyuREu04MNZjQIQxl0LUJDQeTOQXkPBshsxrDjgyC9mvWg/viewform?usp=sf_link" class="cta-email-btn">Fill Out Form</a>
         </div>
       </div>
     </div>
